added paragraph into index.html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   </head>
   <body>
     <h1>Hello GIT!</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus delectus nihil sit iusto eius quis unde corrupti at nostrum temporibus culpa totam iste quaerat, consequatur officiis voluptatem perspiciatis eveniet blanditiis!</p>
   </body>
 </html>
